# savantix-dali-edge-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/baseline_engine/: CMakeLists.txt  baseline_engine.cpp
components/baseline_engine/include/dali/baseline/: baseline_engine.h
components/c6_interface/: CMakeLists.txt  c6_interface.cpp
components/c6_interface/include/dali/c6/: c6_interface.h
components/dali_control/: CMakeLists.txt  dali_control.cpp
components/dali_control/include/dali/control/: dali_control.h
components/dali_core/: CMakeLists.txt
components/dali_core/include/dali/core/: types.h
components/dali_device_manager/: CMakeLists.txt  dali_device_manager.cpp
components/dali_device_manager/include/dali/device/: dali_device_manager.h
components/dali_diagnostics/: CMakeLists.txt  diagnostics.cpp
components/dali_diagnostics/include/dali/diagnostics/: diagnostics.h
components/dali_phy/: CMakeLists.txt
components/dali_phy/include/dali/phy/: i_dali_phy.h
components/dali_protocol/: CMakeLists.txt  dali_response_parser.cpp  dali_transaction.cpp  pipeline_query_client.cpp
components/dali_protocol/include/dali/protocol/: dali_command_queue.h  dali_commands.h  dali_frame.h  dali_protocol_pipeline.h  dali_response_parser.h  dali_transaction.h  i_dali_query_client.h  pipeline_query_client.h
components/dali_scheduler/: CMakeLists.txt  dali_scheduler.cpp
components/dali_scheduler/include/dali/scheduler/: dali_scheduler.h
components/dali_simulator/: CMakeLists.txt  simulated_dali_phy.cpp
components/dali_simulator/include/dali/sim/: simulated_dali_phy.h
components/demo_controller/: CMakeLists.txt  demo_controller.cpp
components/demo_controller/include/dali/demo/: demo_controller.h
components/event_manager/: CMakeLists.txt  event_manager.cpp
components/event_manager/include/dali/events/: event_manager.h
components/light_health_engine/: CMakeLists.txt  light_health_engine.cpp
components/light_health_engine/include/dali/health/: light_health_engine.h
components/local_storage/: CMakeLists.txt  local_storage.cpp  nvs_metadata_store.cpp
components/local_storage/include/dali/storage/: local_storage.h  nvs_metadata_store.h
components/system_monitor/: CMakeLists.txt  system_monitor.cpp  system_monitor_task.cpp
components/system_monitor/include/dali/monitor/: system_monitor.h  system_monitor_task.h
components/time_service/: CMakeLists.txt  esp_time_source.cpp
components/time_service/include/dali/time/: esp_time_source.h  i_time_source.h
components/trend_engine/: CMakeLists.txt  trend_engine.cpp
components/trend_engine/include/dali/trend/: trend_engine.h
docs/: architecture-and-integration.md  dali-control-guide.md
docs/superpowers/plans/: 2026-07-10-savantix-dali-edge-controller-master-plan.md  2026-07-10-savantix-dali-phase-1-foundation.md  2026-07-10-savantix-dali-phase-2-protocol.md  2026-07-10-savantix-dali-phase-3-devices.md
docs/superpowers/specs/: 2026-07-10-dali-visual-simulator-design.md  2026-07-10-savantix-dali-edge-controller-design.md
docs/verification/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  requirements-audit.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.cpp  app_config.h  app_main.cpp  foundation_runtime.cpp  foundation_runtime.h
test/host/: CMakeLists.txt  test_app_config_compile.cpp  test_baseline_engine.cpp  test_c6_interface.cpp  test_communication_quality.cpp  test_dali_capabilities.cpp  test_dali_command_queue.cpp  test_dali_control.cpp  test_dali_device_registry.cpp  test_dali_discovery.cpp  test_dali_frame.cpp  test_dali_protocol_pipeline.cpp  test_dali_response_parser.cpp  test_dali_scheduler.cpp  test_dali_transaction.cpp  test_demo_controller.cpp  test_device_manager_integration.cpp  test_diagnostics.cpp  test_domain_types.cpp  test_event_manager.cpp  test_foundation_composition.cpp  test_light_health.cpp  test_local_storage.cpp  test_phy_contract.cpp  test_pipeline_query_client.cpp  test_simulated_dali_phy.cpp  test_simulated_dali_phy_capacity.cpp  test_support.h  test_system_monitor.cpp  test_time_contract.cpp  test_trend_engine.cpp
